--- a/src/Modal/AddNewsModal.css
+++ b/src/Modal/AddNewsModal.css
@@ -40,12 +40,13 @@
 }
 
 .addnewsmodal__button-back {
+  z-index: -1;
   font-family: "Lato";
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
   position: absolute;
-  top: 10%;
+  top: 2rem;
   left: 20px;
   padding: 10px 20px;
   color: #fff;
