--- a/src/NewsEditorForm/NewsEditorForm.css
+++ b/src/NewsEditorForm/NewsEditorForm.css
@@ -7,6 +7,14 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+  background: #fff;
+}
+
+.newseditor__form-container {
+  z-index: 20;
+  position: relative;
+  overflow: auto;
+  overflow-y: auto;
 }
 
 .newseditor__label {
@@ -35,7 +43,7 @@
 }
 
 .newseditor__input_textarea {
-  height: 100%;
+  height: 120px;
 }
 
 .newseditor__input:focus {
